
  - Fix incomplete singlebyte charater support

  - Fix broken sign extention for 8-bit char on string port read

  - Fix missized-cast of 'quotient' which results a broken value on 64-bit
    configurations

  - Fix broken evaluation of quasiquoted vectors splicing with improper list

  - Fix 64-bit capability of quasiquoted vectors

  - Fix passing circular list into error object when SRFI-38 is not enabled

  - Fix '0' prefix incapability on a maximum-length binary number literal. See
    "R5RS conformance: Numbers: Literals" subsection of doc/spec.txt for
    further details

  - Fix a broken type handling appeares on (equal? macro1 macro2) on
    storage-compact

  - Fix broken procedure invocation appears on a minor build configuration

  - Fix acceptable pathname length of a script name of sscm command previously
    one char lesser than maximum


Overview of changes from 0.5.0 (r3097 + private modifications) to 0.6.1
==
* New features

  - Support R5RS hygienic macros

  - Support format strings (covers SRFI-28 and SRFI-48)

  - Add global symbol exportation control method in portable way (see
    doc/global-obj.txt)

  - Add experimental support for embedded platforms that lack writable static
    data, such as BREW or Symbian OS (see doc/global-obj.txt)

* Fixes

  - Make installed libsscm and header files workable


Overview of changes from 0.5.0-alpha (r2902 + private modifications) to 0.5.0
==
* New features

  - Support 64-bit data models (storage-compact is not yet)

  - Add lacking character predicates and complete all R5RS character procedures

  - Add lacking string predicates and complete all R5RS string procedures

  - Support constant list (storage-compact does not)

  - Support constant vector (storage-compact is not yet)

  - Add quote-less vector literal check

* Fixes

  - Make behavior of internal definitions strictly conforming to R5RS

  - Make C99-dependent stdint.h unneeded