@@ -268,7 +268,7 @@ yyyy yyy srfi module-srfi34.c
          srfi module-srfi48.c
 yyyyyyyy srfi module-srfi60.c
 y yy y   opt module-sscm-ext.c
-         opt module-siod.c
+y yy y   opt module-siod.c
          other main.c
          other sigscheme-combined.h
          other dllentry.c
@@ -984,12 +984,12 @@ corner case tests:
 
 file:              module-siod.c
 category:          opt
-spec by eyes:      
+spec by eyes:      yamaken@r4021
 spec by tests:     
-general review:    
-64-bit by eyes:    
+general review:    yamaken@r4021
+64-bit by eyes:    yamaken@r4021
 64-bit by tests:   
-coding style:      
+coding style:      yamaken@r4021
 normal case tests: 
 corner case tests: 
 
@@ -1030,6 +1030,10 @@ corner case tests:
 Log
 ---
 2006-11-30  YamaKen <yamaken AT bp.iij4u.or.jp>
+
+        * module-siod.c
+          - QA done @r4021 by eyes
+          - Fix broken body result of %%closure-code when body-length == 1
 
         * module-sscm-ext.c
           - QA done @r4020 by eyes
